gradient descent working 2

--- a/params_test.ipynb
+++ b/params_test.ipynb
@@ -1944,12 +1944,14 @@
     "for i in range(max_iter_num):\n",
     "    # Progressively increase the number of samples when reaching max_iter_num\n",
     "    if i > 0.8 * max_iter_num:\n",
-    "        sample_num = \n",
+    "        used_sample_num = int(2 * (i - 0.8 * max_iter_num) / (0.2 * max_iter_num) * sample_num)\n",
+    "    else:\n",
+    "        used_sample_num = sample_num\n",
     "\n",
     "    key, subkey = random.split(key)\n",
     "    total_mmd_loss, discrete_mmd_loss_ev, continuum_mmd_loss, grad_of_expected_value_continuum, grad_of_expected_value_discrete, updates =\\\n",
     "          sample_and_get_updates(full_energy_paths, initial_energy, tree_body, jax_cdf_minimum, gaussian_kernel_vmap, sim_meta_params,\\\n",
-    "                                  sim_params, NOMINAL_PARAMS, subkey, sample_num=sample_num, discrete_cut_percentage=0.05)\n",
+    "                                  sim_params, NOMINAL_PARAMS, subkey, sample_num=used_sample_num, discrete_cut_percentage=0.05)\n",
     "    print('--------------------')\n",
     "    print(i, \"LOSS\", total_mmd_loss)\n",
     "\n",
